--- a/puma-repository-code/trunk/Unit converter/UnitConverterTests.lpi
+++ b/puma-repository-code/trunk/Unit converter/UnitConverterTests.lpi
@@ -17,7 +17,8 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="5"/>
+      <MinorVersionNr Value="1"/>
+      <BuildNr Value="7"/>
       <StringTable CompanyName="FORMATIO RETICULARIS " ProductVersion="PUMA Repository"/>
     </VersionInfo>
     <BuildModes Count="1">
