--- a/puma-repository-code/trunk/Unit converter/UnitConverterTests.lpi
+++ b/puma-repository-code/trunk/Unit converter/UnitConverterTests.lpi
@@ -18,7 +18,8 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="1"/>
-      <BuildNr Value="7"/>
+      <RevisionNr Value="1"/>
+      <BuildNr Value="12"/>
       <StringTable CompanyName="FORMATIO RETICULARIS " ProductVersion="PUMA Repository"/>
     </VersionInfo>
     <BuildModes Count="1">
