--- a/puma-repository-code/trunk/HL7 support/hl7tests.lpi
+++ b/puma-repository-code/trunk/HL7 support/hl7tests.lpi
@@ -17,8 +17,8 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="46"/>
-      <StringTable CompanyName="FORMATIO RETICULARIS " ProductName="PUMA Repository" ProductVersion=""/>
+      <BuildNr Value="50"/>
+      <StringTable CompanyName="FORMATIO RETICULARIS " LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" ProductName="PUMA Repository" ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
