--- a/puma-repository-code/trunk/HL7 support/hl7tests.lpi
+++ b/puma-repository-code/trunk/HL7 support/hl7tests.lpi
@@ -17,7 +17,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="79"/>
+      <BuildNr Value="81"/>
       <StringTable CompanyName="FORMATIO RETICULARIS " LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" ProductName="PUMA Repository" ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
@@ -44,7 +44,7 @@
         <PackageName Value="FCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="hl7tests.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -60,6 +60,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="HL7"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="msh.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="MSH"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
