--- a/puma-repository-code/trunk/HL7 support/Example_Programs/MessageViewer/MessageViewer.lpi
+++ b/puma-repository-code/trunk/HL7 support/Example_Programs/MessageViewer/MessageViewer.lpi
@@ -17,7 +17,8 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="26"/>
+      <RevisionNr Value="1"/>
+      <BuildNr Value="28"/>
       <StringTable CompanyName="FORMATIO RETICULARIS" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="HL7 MessageViewer" ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
