GUI for MessageViewer improved.

--- a/puma-repository-code/trunk/HL7 support/Example_Programs/MessageViewer/MessageViewer.lpi
+++ b/puma-repository-code/trunk/HL7 support/Example_Programs/MessageViewer/MessageViewer.lpi
@@ -18,8 +18,8 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
       <RevisionNr Value="1"/>
-      <BuildNr Value="38"/>
-      <StringTable CompanyName="FORMATIO RETICULARIS" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="HL7 MessageViewer" ProductVersion=""/>
+      <BuildNr Value="42"/>
+      <StringTable CompanyName="FORMATIO RETICULARIS" InternalName="MessageViewer" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="HL7 MessageViewer" ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
