--- a/puma-repository-code/trunk/HL7 support/Lazarus and FPC/Test Cases for FPCUnit/hl7tests.lpi
+++ b/puma-repository-code/trunk/HL7 support/Lazarus and FPC/Test Cases for FPCUnit/hl7tests.lpi
@@ -18,7 +18,7 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="3"/>
-      <BuildNr Value="131"/>
+      <BuildNr Value="134"/>
       <StringTable CompanyName="FORMATIO RETICULARIS " FileDescription="Unit Tests for HL7 engine" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="PUMA Repository" ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
@@ -45,7 +45,7 @@
         <PackageName Value="FCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="11">
+    <Units Count="12">
       <Unit0>
         <Filename Value="hl7tests.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -101,6 +101,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="PID"/>
       </Unit10>
+      <Unit11>
+        <Filename Value="../pv1.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="PV1"/>
+      </Unit11>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
