Debugging Unit converter for Delphi.

--- a/puma-repository-code/trunk/Unit converter/Delphi/Test Cases for DUnit/dunit.ini
+++ b/puma-repository-code/trunk/Unit converter/Delphi/Test Cases for DUnit/dunit.ini
@@ -24,3 +24,11 @@ WarnOnFailTestOverride=0
 PopupX=350
 PopupY=30
 
+[Tests.UnitConverterTests.exe]
+
+[Tests.UnitConverterTests.exe.TControlTestCases]
+
+[Tests.UnitConverterTests.exe.TUnitParserTestCases]
+
+[Tests.UnitConverterTests.exe.TMeasurementParserTestCases]
+
