Fixing a bug that caused a crash when running the code with Delphi 7.

--- a/puma-repository-code/trunk/Unit converter/Delphi/Test Cases for DUnit/dunit.ini
+++ b/puma-repository-code/trunk/Unit converter/Delphi/Test Cases for DUnit/dunit.ini
@@ -1,7 +1,7 @@
 [GUITestRunner Config]
 AutoSave=1
-Left=98
-Top=163
+Left=105
+Top=146
 Width=777
 Height=809
 Maximized=0
@@ -31,4 +31,6 @@ PopupY=30
 [Tests.UnitConverterTests.exe.TUnitParserTestCases]
 
 [Tests.UnitConverterTests.exe.TMeasurementParserTestCases]
+
+[Tests.UnitConverterTests.exe.TconverterTestCases]
 
