--- a/puma-repository-code/trunk/HL7 support/Lazarus and FPC/Test Cases for FPCUnit/hl7tests.lpi
+++ b/puma-repository-code/trunk/HL7 support/Lazarus and FPC/Test Cases for FPCUnit/hl7tests.lpi
@@ -18,7 +18,7 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="6"/>
-      <BuildNr Value="195"/>
+      <BuildNr Value="216"/>
       <StringTable CompanyName="FORMATIO RETICULARIS " FileDescription="Unit Tests for HL7 engine" InternalName="PUMA HL7 Engine" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="PUMA Repository" ProductVersion="1.6.0"/>
     </VersionInfo>
     <BuildModes Count="1">
@@ -45,7 +45,7 @@
         <PackageName Value="FCL"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="15">
+    <Units Count="16">
       <Unit0>
         <Filename Value="hl7tests.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -121,6 +121,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="PV2"/>
       </Unit14>
+      <Unit15>
+        <Filename Value="../mllp.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="MLLP"/>
+      </Unit15>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
