--- a/puma-repository-code/trunk/Unit converter/Lazarus and FPC/Test Cases for FPCUnit/UnitConverterTests.lpi
+++ b/puma-repository-code/trunk/Unit converter/Lazarus and FPC/Test Cases for FPCUnit/UnitConverterTests.lpi
@@ -19,8 +19,8 @@
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="3"/>
       <RevisionNr Value="2"/>
-      <BuildNr Value="36"/>
-      <StringTable CompanyName="FORMATIO RETICULARIS " InternalName="Unit Converter" ProductName="PUMA Repository" ProductVersion="1.3.2"/>
+      <BuildNr Value="37"/>
+      <StringTable CompanyName="FORMATIO RETICULARIS " InternalName="Unit Converter 1.3.2 (Delphinus) " ProductName="PUMA Repository" ProductVersion="1.3.2"/>
     </VersionInfo>
     <BuildModes Count="1" Active="Default">
       <Item1 Name="Default" Default="True"/>
@@ -51,10 +51,11 @@
         <Filename Value="UnitConverterTests.lpr"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="UnitConverterTests"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
-        <CursorPos X="6" Y="2"/>
+        <CursorPos X="1" Y="2"/>
         <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -65,7 +66,7 @@
         <EditorIndex Value="1"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
-        <CursorPos X="9" Y="2"/>
+        <CursorPos X="1" Y="2"/>
         <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit1>
@@ -73,16 +74,15 @@
         <Filename Value="../unitconverter.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="UnitConverter"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="0"/>
         <WindowIndex Value="0"/>
         <TopLine Value="1"/>
-        <CursorPos X="4" Y="2"/>
+        <CursorPos X="1" Y="2"/>
         <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit2>
     </Units>
-    <JumpHistory Count="3" HistoryIndex="2">
+    <JumpHistory Count="6" HistoryIndex="5">
       <Position1>
         <Filename Value="../unitconverter.pas"/>
         <Caret Line="2" Column="1" TopLine="1"/>
@@ -95,6 +95,18 @@
         <Filename Value="../unitconverter.pas"/>
         <Caret Line="159" Column="18" TopLine="141"/>
       </Position3>
+      <Position4>
+        <Filename Value="../unitconverter.pas"/>
+        <Caret Line="9" Column="17" TopLine="1"/>
+      </Position4>
+      <Position5>
+        <Filename Value="unitconvertertestcase.pas"/>
+        <Caret Line="9" Column="29" TopLine="1"/>
+      </Position5>
+      <Position6>
+        <Filename Value="UnitConverterTests.lpr"/>
+        <Caret Line="9" Column="29" TopLine="1"/>
+      </Position6>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
