Updating code for Lazarus 1.4

--- a/puma-repository-code/trunk/HL7 support/Lazarus and FPC/Test Cases for FPCUnit/hl7tests.lpi
+++ b/puma-repository-code/trunk/HL7 support/Lazarus and FPC/Test Cases for FPCUnit/hl7tests.lpi
@@ -18,7 +18,8 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
       <MinorVersionNr Value="7"/>
-      <BuildNr Value="237"/>
+      <BuildNr Value="238"/>
+      <Attributes pvaDebug="True"/>
       <StringTable Comments="with contributions by Marek Skorupski" CompanyName="FORMATIO RETICULARIS " FileDescription="Unit Tests for HL7 engine" InternalName="PUMA HL7 Engine 1.7 (Hermes)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="PUMA Repository" ProductVersion="1.7.0"/>
     </VersionInfo>
     <BuildModes Count="1">
@@ -49,7 +50,6 @@
       <Unit0>
         <Filename Value="hl7tests.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="hl7tests"/>
       </Unit0>
       <Unit1>
         <Filename Value="hl7testcases.pas"/>
@@ -164,12 +164,6 @@
         <UseHeaptrc Value="True"/>
       </Debugging>
     </Linking>
-    <Other>
-      <CompilerMessages>
-        <MsgFileName Value=""/>
-      </CompilerMessages>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
