Implementing fields that were introduced with HL7 v2.8

--- a/puma-repository-code/trunk/HL7 support/Lazarus and FPC/Example_Programs/MessageViewer/MessageViewer.lpi
+++ b/puma-repository-code/trunk/HL7 support/Lazarus and FPC/Example_Programs/MessageViewer/MessageViewer.lpi
@@ -17,8 +17,8 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="2"/>
-      <BuildNr Value="77"/>
-      <StringTable CompanyName="FORMATIO RETICULARIS" InternalName="HL7 MessageViewer 2.0.0 (Hermes)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="HL7 MessageViewer" ProductVersion="2.0.0"/>
+      <BuildNr Value="78"/>
+      <StringTable Comments="Demo program showing implementation of HL7 engine" CompanyName="FORMATIO RETICULARIS" InternalName="HL7 MessageViewer 2.0.0 (Hermes)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="HL7 MessageViewer" ProductVersion="2.0.0"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
