--- a/puma-repository-code/trunk/HL7 engine/Lazarus and FPC/Example_Programs/MessageViewer/MessageViewer.lpi
+++ b/puma-repository-code/trunk/HL7 engine/Lazarus and FPC/Example_Programs/MessageViewer/MessageViewer.lpi
@@ -17,8 +17,9 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="2"/>
-      <BuildNr Value="78"/>
-      <StringTable Comments="Demo program showing implementation of HL7 engine" CompanyName="FORMATIO RETICULARIS" InternalName="HL7 MessageViewer 2.0.0 (Hermes)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="HL7 MessageViewer" ProductVersion="2.0.0"/>
+      <RevisionNr Value="1"/>
+      <BuildNr Value="79"/>
+      <StringTable Comments="Demo program showing implementation of HL7 engine" CompanyName="FORMATIO RETICULARIS" InternalName="HL7 MessageViewer 2.0.1 (Hermes)" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" ProductName="HL7 MessageViewer" ProductVersion="2.0.1"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
