--- a/puma-repository-code/trunk/Unit converter/Lazarus and FPC/Test Cases for FPCUnit/UnitConverterTests.lpi
+++ b/puma-repository-code/trunk/Unit converter/Lazarus and FPC/Test Cases for FPCUnit/UnitConverterTests.lpi
@@ -8,7 +8,6 @@
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <Icon Value="0"/>
-      <ActiveWindowIndexAtStart Value="0"/>
     </General>
     <i18n>
       <EnableI18N LFM="False"/>
@@ -17,10 +16,9 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <MinorVersionNr Value="3"/>
-      <RevisionNr Value="2"/>
-      <BuildNr Value="37"/>
-      <StringTable CompanyName="FORMATIO RETICULARIS " InternalName="Unit Converter 1.3.2 (Delphinus) " ProductName="PUMA Repository" ProductVersion="1.3.2"/>
+      <MinorVersionNr Value="4"/>
+      <BuildNr Value="39"/>
+      <StringTable CompanyName="FORMATIO RETICULARIS " InternalName="Unit Converter 1.4.0 (Eridanus) " LegalCopyright="© 1994 - 2016 J. W. Dietrich and collaborators" ProductName="PUMA Repository" ProductVersion="1.4.0"/>
     </VersionInfo>
     <BuildModes Count="1" Active="Default">
       <Item1 Name="Default" Default="True"/>
@@ -50,12 +48,8 @@
       <Unit0>
         <Filename Value="UnitConverterTests.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="UnitConverterTests"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="2"/>
+        <CursorPos X="7" Y="2"/>
         <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit0>
@@ -64,9 +58,7 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="UnitConverterTestCase"/>
         <EditorIndex Value="1"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="2"/>
+        <CursorPos X="4" Y="2"/>
         <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit1>
@@ -74,18 +66,16 @@
         <Filename Value="../unitconverter.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="UnitConverter"/>
-        <EditorIndex Value="0"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="2"/>
+        <IsVisibleTab Value="True"/>
+        <CursorPos X="6" Y="2"/>
         <UsageCount Value="20"/>
         <Loaded Value="True"/>
       </Unit2>
     </Units>
-    <JumpHistory Count="6" HistoryIndex="5">
+    <JumpHistory Count="8" HistoryIndex="7">
       <Position1>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="2" Column="1" TopLine="1"/>
+        <Caret Line="2"/>
       </Position1>
       <Position2>
         <Filename Value="../unitconverter.pas"/>
@@ -97,16 +87,24 @@
       </Position3>
       <Position4>
         <Filename Value="../unitconverter.pas"/>
-        <Caret Line="9" Column="17" TopLine="1"/>
+        <Caret Line="9" Column="17"/>
       </Position4>
       <Position5>
         <Filename Value="unitconvertertestcase.pas"/>
-        <Caret Line="9" Column="29" TopLine="1"/>
+        <Caret Line="9" Column="29"/>
       </Position5>
       <Position6>
         <Filename Value="UnitConverterTests.lpr"/>
-        <Caret Line="9" Column="29" TopLine="1"/>
+        <Caret Line="9" Column="29"/>
       </Position6>
+      <Position7>
+        <Filename Value="../unitconverter.pas"/>
+        <Caret Line="2" Column="29"/>
+      </Position7>
+      <Position8>
+        <Filename Value="../unitconverter.pas"/>
+        <Caret Line="165" Column="46" TopLine="150"/>
+      </Position8>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
@@ -115,12 +113,6 @@
       <IncludeFiles Value="$(ProjOutDir)"/>
       <OtherUnitFiles Value=".."/>
     </SearchPaths>
-    <Other>
-      <CompilerMessages>
-        <MsgFileName Value=""/>
-      </CompilerMessages>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
@@ -135,5 +127,4 @@
       </Item3>
     </Exceptions>
   </Debugging>
-  <EditorMacros Count="0"/>
 </CONFIG>
